objects/Country_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>General settings around the countries like Country-office mapping, etc</description>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>The country code of the country</description>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <description>Country Name value</description>
        <label>Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Name__c</fullName>
        <description>office name mapped to the country</description>
        <label>Office Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Country Settings</label>
</CustomObject>